--- a/nos-tech/src/screens/adminViews/courseView.css
+++ b/nos-tech/src/screens/adminViews/courseView.css
@@ -40,7 +40,7 @@
   transform: scale(1.2, 1.2);
   color: #005a8f;
 }
-.content-items-review-part{
+.content-items-review-part {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -61,7 +61,6 @@
     width: 350px;
     height: 200px;
   }
-
 }
 
 .videoUpload {
@@ -71,7 +70,7 @@
 .videoForm-container {
   width: 90%;
 }
-.nostech-guide-text{
+.nostech-guide-text {
   font-size: 20px;
   font-weight: 400;
   line-height: 2;
@@ -79,15 +78,15 @@
   padding-top: 1rem;
   color: #005a8f;
 }
-.edit-video-done-buton{
+.edit-video-done-buton {
   width: 20rem;
   border: 1px solid black;
   padding: 10px;
   padding-right: 10rem;
   padding-left: 10rem;
   border-radius: 0;
-  color:white;
-  background-color:#1d6cff;
+  color: white;
+  background-color: #1d6cff;
   margin-right: 10px;
   font-size: 15px;
   font-weight: 300;
@@ -96,8 +95,14 @@
   transition-timing-function: ease-in-out;
   transition-duration: 0.5s;
 }
-.edit-video-done-buton:hover{
+.edit-video-done-buton:hover {
   text-decoration: none;
   color: white;
   box-shadow: 2px 2px 2px #1d6cff;
+}
+
+.butoniKalter {
+  background-color: #0069d9;
+  border-color: #0062cc;
+  color: white;
 }
