--- a/nos-tech/src/components/dashboard-components/Dashboard-Component.css
+++ b/nos-tech/src/components/dashboard-components/Dashboard-Component.css
@@ -11,13 +11,13 @@
     font-size: 15px;
 }
 .recharts-default-legend{
-    margin: -15px !important;
+    margin: -25px !important;
 }
 .radar-card{
     margin-top: 3rem;
     height: 300px;
     padding: 1rem;
-    width: 570px;
+    width: 948px;
 }
 .radar-info-card{
     margin-top: 5rem;
@@ -57,5 +57,8 @@
 @media (max-width: 768px) {
     .radar-info-card{
         margin: 15px 0 5px 0;
+    }
+    .radar-card{
+        width: 500px;
     }
 }
